<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>cmssi.util</groupId>
  <artifactId>lyson</artifactId>
  <version>0.5</version>
  
  <name>lyson</name>
  <description>Lazy JSON</description>
  
  
  <dependencies>  		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
  </dependencies>
  
  <build>
  		<sourceDirectory>src/main</sourceDirectory>
		<plugins>
	        <plugin>
	          <artifactId>maven-compiler-plugin</artifactId>
	          <version>3.8.0</version>
         	  <configuration>         		
	          	<source>8</source>
	            <target>8</target>
	            <fork>true</fork>	
         	  </configuration>
	          <executions>
	          	<execution>
	          		<id>default-compile</id>
	          		<goals>
	          			<goal>compile</goal>
	          		</goals>
	          		<phase>compile</phase>
	          		<configuration>
			          	<source>8</source>
			            <target>8</target>
	            		<fork>true</fork>	
	          			<includes>
	          				<include>java/**/*.java</include>
	          			</includes>
	          		</configuration>
	          	</execution>
	          	<execution>
	          		<id>compile-module-info</id>
	          		<goals>
	          			<goal>compile</goal>
	          		</goals>
	          		<phase>compile</phase>
	          		<configuration>
	          			<release>9</release>
	          			<multiReleaseOutput>true</multiReleaseOutput>
	          			<includes>
	          				<include>java-9/**/*.java</include>
	          			</includes>
			          	<source>9</source>
			            <target>9</target>
			            <fork>true</fork>	
	          		</configuration>
	          	</execution>
	          </executions> 
	        </plugin>
	        <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<argLine>${surefire.argLine} -XX:MaxPermSize=512m</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>common-junit48</artifactId>
						<version>2.18.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.12</version>
				<executions>
					<execution>
						<id>default-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	         <plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.4</version>
				<configuration>
					<append>true</append>
				</configuration>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<propertyName>surefire.argLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>default-prepare-agent-integration</id>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
						<configuration>
							<destFile>${sonar.jacoco.reportPath}</destFile>
						</configuration>
					</execution>
					<execution>
						<id>default-jacoco-site</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-jar-plugin</artifactId>
		        <configuration>
		          <archive>
		            <manifestFile>target/outputManifest/MANIFEST.MF</manifestFile>
		          </archive>
		        </configuration>
      		</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
          		<version>4.2.1</version>
                <extensions>true</extensions>
                <executions>
                	<execution>
                		<phase>compile</phase>
                		<goals>
                			<goal>manifest</goal>
                		</goals>                		
						<configuration>
							<manifestLocation>target/outputManifest/</manifestLocation>
							<instructions>								
								<Built-By>cmunilla@cmssi.fr</Built-By>
								<Automatic-Module-Name>cmssi.lyson</Automatic-Module-Name>
								<Multi-Release>true</Multi-Release>
								<_nouses>true</_nouses>  
								<_nodefaultversion>true</_nodefaultversion>
								<_failok>true</_failok>
								<Require-Capability>osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version&gt;=1.8))"</Require-Capability>
							</instructions>
						</configuration>
                	</execution>
                </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>${project.basedir}/checkstyle-sun.xml</configLocation>
							<suppressionsLocation>${project.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>false</consoleOutput>
							<failsOnError>false</failsOnError>
							<excludes>**/module-info.java</excludes>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
                   <dependencies>
                       <dependency>
                           <groupId>com.puppycrawl.tools</groupId>
                           <artifactId>checkstyle</artifactId>
                           <version>8.29</version>
                       </dependency>
                   </dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
	          <artifactId>maven-javadoc-plugin</artifactId>
	          <version>3.1.1</version>
	          <executions>
	            <execution>
	              <id>attach-javadocs</id>
	              <goals>
	                <goal>jar</goal>
	              </goals>
	            </execution>
	          </executions>
	          <configuration>
	          	<source>8</source>
	            <sourcepath>${project.basedir}/src/main/java</sourcepath>
	            <show>protected</show>
	          </configuration>
	        </plugin>
		</plugins>
	</build>
	
</project>